// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlusIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-PlusIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M1,6.6h14v2.8H1V6.6z"
  />
  <path
    d="M6.6,1v14h2.8V1H6.6z"
  />
</Icon>
`;

exports[`PlusIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-PlusIcon"
  isBadge={true}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M1,6.6h14v2.8H1V6.6z"
  />
  <path
    d="M6.6,1v14h2.8V1H6.6z"
  />
</Icon>
`;

exports[`PlusIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-PlusIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M1,6.6h14v2.8H1V6.6z"
  />
  <path
    d="M6.6,1v14h2.8V1H6.6z"
  />
</Icon>
`;

exports[`PlusIcon [common] example testing should match snapshot(s) for 2.clickable 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-PlusIcon"
  isBadge={true}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M1,6.6h14v2.8H1V6.6z"
  />
  <path
    d="M6.6,1v14h2.8V1H6.6z"
  />
</Icon>
`;

exports[`PlusIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-PlusIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M1,6.6h14v2.8H1V6.6z"
  />
  <path
    d="M6.6,1v14h2.8V1H6.6z"
  />
</Icon>
`;

exports[`PlusIcon [common] example testing should match snapshot(s) for 3.disabled 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-PlusIcon"
  isBadge={true}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M1,6.6h14v2.8H1V6.6z"
  />
  <path
    d="M6.6,1v14h2.8V1H6.6z"
  />
</Icon>
`;
